--- a/main.css
+++ b/main.css
@@ -49,6 +49,7 @@ p{
     background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(./header-background.jpg) center center no-repeat;
     background-size: cover;
     text-align: center;
+    height: 150vh;
 }
   .container {
     width: 100%;
@@ -63,6 +64,12 @@ p{
       max-width: 540px;
     }
   }
+    @media (max-width:470px){
+      .res-bt{
+        flex-direction: column;
+      }
+    }  
+  
   
   @media (min-width: 768px) {
     .container {
@@ -117,7 +124,9 @@ h1 {
     margin-bottom: 1.75rem;
     color: #ddd;
 }
-
+#number,#question{
+  color: #ffbd50;
+}
 .p-large {
     font: 400 1.125rem/1.75rem "Montserrat", sans-serif;
 }
@@ -133,10 +142,7 @@ h1 {
     margin-bottom: 1.125rem;
     margin-left: 0.5rem;
 }
-.btn-solid-lg{
-  position: relative;
-  top: 4rem;
-}
+
 
 .btn-solid-lg button{
     cursor: pointer;
@@ -154,6 +160,18 @@ h1 {
   background-color: #ffbd50;
 }
 
+.res-bt{  
+  display: flex;
+  flex: 1;
+  align-items: center;
+  margin-top: 50px;
+  justify-content: center;
+  position: relative;
+  top: inherit;
+  left: inherit;
+  /* top: 10% ;
+  left: 28%; */
+}
 #detail,#count,#req{
   color: #000;
 }
@@ -174,20 +192,23 @@ h1 {
   cursor: pointer;
   transform: scale(1.3);
 }
+#hid{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 #req{
   width: 350px;
   height: 500px;
   background-color: #fff;
   filter:drop-shadow(0 0 1.5rem #7e5903);
-  position: absolute;
-  top: 110%;
-  left: 35%;
+  position: relative;
+  align-items: center;
+  justify-content: center;
   display: flex;
   color: #000;
   flex-direction: column;
   padding: 2.0rem;
-  justify-content: center;
-  align-items: center;
   transition: transform 0.3s ease;
 }
 #req > button{
