--- a/main.css
+++ b/main.css
@@ -192,7 +192,7 @@ h1 {
   cursor: pointer;
   transform: scale(1.3);
 }
-#hid{
+.hid{
   display: flex;
   align-items: center;
   justify-content: center;
