--- a/main.css
+++ b/main.css
@@ -43,6 +43,10 @@ p{
   color: #fff;
   font-size: 1.5rem;
 }
+img{
+  width: 100%;
+  height: 500px;
+}
 .header {
     position: relative;
     padding-top: 8rem;
@@ -50,7 +54,7 @@ p{
     background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(./header-background.jpg) center center no-repeat;
     background-size: cover;
     text-align: center;
-    height: 180vh;
+    height: 250vh;
 }
   .container {
     width: 100%;
@@ -76,6 +80,7 @@ p{
     .container {
       max-width: 720px;
     }
+
   }
   
   @media (min-width: 992px) {
@@ -83,7 +88,11 @@ p{
       max-width: 960px;
     }
   }
-  
+  @media (max-width:768px){
+    .header{
+      height:420vh;
+    }
+  }
   @media (min-width: 1200px) {
     .container {
       max-width: 1140px;
@@ -259,6 +268,10 @@ h1 {
   width: 200px;
   border: none;
   -webkit-appearance: none;
+}
+#guide{
+  position: relative;
+  top: 100%;
 }
 #question{
   height: 70px;
