--- a/main.css
+++ b/main.css
@@ -294,6 +294,10 @@ h1 {
 #results-container> div p {
   margin-top: 0.5rem;
   font-size: 1.2rem;
+  text-align:justify;
+}
+#results-container > div{
+  
 }
 @media (min-width: 992px){
 .navbar-custom {
