--- a/main.css
+++ b/main.css
@@ -229,18 +229,20 @@ h1 {
   margin-top: 0.2rem;
 }
 #req>button{
-  color: #000;
-  background-color: #fff;
-  padding: 1.2rem;
-  border-radius:2.2rem;
-  font-size: 1.5rem;
-  font-weight: bold;
-  
+  cursor: pointer;
+    display: inline-block;
+    padding: 1.375rem 2.625rem 1.375rem 2.625rem;
+    border: 0.125rem solid #ffbd50;
+    border-radius: 2rem;
+    background-color: #ffbc50d9;
+    color: #333;
+    font: 600 0.875rem/0 "Montserrat", sans-serif;
+    text-decoration: none;
+    transition: all 0.2s;
+    font-size: 1.5rem;
 }
 #req  > button:hover{
-  color: #fff;
-  background-color: #000;
-  font-size: 1.5rem;
+  background-color: #ffbd50;
 }
 #req input{
   padding: 0.2rem;
