--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ img{
     background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(./header-background.jpg) center center no-repeat;
     background-size: cover;
     text-align: center;
-    height: 80vh;
+    height: 50vh;
 }
   .container {
     width: 100%;
@@ -264,7 +264,20 @@ h1 {
   margin-top: 1rem;
   width: 100%;
 }
-
+.read-more{
+  cursor: pointer;
+    display: inline-block;
+    padding: 1.375rem 2.625rem 1.375rem 2.625rem;
+    border: 0.125rem solid #ffbd50;
+    border-radius: 2rem;
+    background-color: #ffbc50d9;
+    color: #333;
+    font: 600 0.875rem/0 "Montserrat", sans-serif;
+    text-decoration: none;
+    transition: all 0.2s;
+    font-size: 1.5rem;
+    white-space: nowrap;
+}
 @media (max-width: 768px) {
   #results-container {
     flex-direction: column;
@@ -287,13 +300,23 @@ h1 {
 #guide{
   position: relative;
   top: 10%;
+  left: -15%;
+  width: 1400px;
+ text-align: justify;
+}
+@media (max-width:576px){
+  #guide{
+    left: 0;
+    width: 100%;
+  
+  }
 }
 #question{
   height: 80px;
   overflow: none;
 }
 .result-item{
-  height: 510px;
+  height: 350px;
   background-color: transparent;
 }
 #results-container > div img {
@@ -331,11 +354,14 @@ h1 {
     top: auto;
   }
   .result-item{
-    width: 5000px;
+    width: 100%;
   }
 }
 
-
+.hr-class{
+  background-color: #fff;
+  margin-top: 100px;
+}
 
 @media (min-width: 992px){
 .navbar-custom {
