--- a/main.css
+++ b/main.css
@@ -267,11 +267,9 @@ h1 {
 .read-more{
   cursor: pointer;
     display: inline-block;
-    padding: 1.375rem 2.625rem 1.375rem 2.625rem;
-    border: 0.125rem solid #ffbd50;
-    border-radius: 2rem;
-    background-color: #ffbc50d9;
-    color: #333;
+    color: #ffbd50;
+    background-color: transparent;
+    border:none;
     font: 600 0.875rem/0 "Montserrat", sans-serif;
     text-decoration: none;
     transition: all 0.2s;
@@ -319,10 +317,12 @@ h1 {
   height: 350px;
   background-color: transparent;
 }
-#results-container > div img {
-  width: 100%;
-  height: auto;
+.result-image {
+  width: 200px;
+  height: 200px;
+  object-fit: cover; /* Optional: Maintain aspect ratio and fill the container */
 }
+
 
 #results-container > div h3 {
   margin-top: 1rem;
