--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ img{
     background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(./header-background.jpg) center center no-repeat;
     background-size: cover;
     text-align: center;
-    height: 50vh;
+    height: 100vh;
 }
   .container {
     width: 100%;
@@ -195,7 +195,7 @@ h1 {
   border-right: none;
   transition: transform 0.3s ease;
 }
-#ph:hover{
+/* #ph:hover{
   
   cursor: pointer;
   transform: scale(1.3);
@@ -204,7 +204,7 @@ h1 {
  
   cursor: pointer;
   transform: scale(1.3);
-}
+} */
 .hid{
   display: flex;
   align-items: center;
@@ -318,11 +318,14 @@ h1 {
   background-color: transparent;
 }
 .result-image {
-  width: 200px;
-  height: 200px;
+  width: 290px;
+  height: 290px;
   object-fit: cover; /* Optional: Maintain aspect ratio and fill the container */
+  padding: 3.2rem;
 }
-
+.description{
+  padding: 1.2rem;
+}
 
 #results-container > div h3 {
   margin-top: 1rem;
